reduced font-size on modal to avoid wrapping on mobile view

--- a/style.css
+++ b/style.css
@@ -94,13 +94,14 @@ body {
     margin-bottom: 3px;
     font: inherit;
     color: currentColor;
-    width: 1em;
-    height: 1em;
+    width: 0.8em;
+    height: 0.8em;
     border: 0.1em solid currentColor;
     border-radius: 0.15em;
 }
 
 .modal-form-inputgroup label {
+    font-size: 1rem;
     margin-left: 10px;
     justify-self: flex-end;
 }
